--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Roger - Desenvolvedor e Designer</title>
-  <meta name="description" content="Desenvolvedor Front End e UX/UI Designer Localizado no Rio de Janeiro">
+  <meta name="description" content="Desenvolvedor Front End e UI Designer Localizado no Recife">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="./streamlinehq-146-the-team-250.SVG" type="image/svg+xml">
 </head>
 
 <body>
