--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Roger - Desenvolvedor e Designer</title>
   <meta name="description" content="Desenvolvedor Front End e UI Designer Localizado no Recife">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="icon" href="./img/streamlinehq-146-the-team-250.SVG" type="image/svg+xml">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
